correction of collapse icons

--- a/src/styles/layout/_collapses.scss
+++ b/src/styles/layout/_collapses.scss
@@ -33,11 +33,11 @@
         cursor: pointer;
     }
     &__up {
-        transform: rotate(180deg);
+        transform: rotate(0deg);
         transition: all 0.5s ease-out;
     }
     &__down {
-        transform: rotate(0deg);
+        transform: rotate(-180deg);
         transition: all 0.5s ease-out;
     }
 }
